--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,12 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    tools:context="autopilot.android.brainmurphy.com.autopilot.MainActivity$PlaceholderFragment">
 
     <ListView
         android:layout_width="wrap_content"
@@ -18,4 +16,3 @@
         android:layout_alignParentStart="true" />
 
 </RelativeLayout>
-<!-- From: file:/Users/luis/Documents/Development/autopilot/app/src/main/res/layout/activity_main.xml -->
