--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,15 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+
     </style>
+
+    <style name="MyActionBar">
+        <item name="android:background">#F66BFF</item>
+    </style>
+
+    <color name="active">#63D6C7</color>
+    <color name="inactive">#CFCFCF</color>
+    <color name="text_color">#ffffff</color>
 
 </resources>
