--- a/app/src/main/res/layout/list_item_row.xml
+++ b/app/src/main/res/layout/list_item_row.xml
@@ -1,29 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/active"
+    android:layout_marginBottom="0.5dp"
+    android:layout_marginTop="0dp"
+    android:focusableInTouchMode="true"
+    android:clickable="true"
+    android:padding="5dp">
 
     <ImageView
-        android:layout_width="31dp"
-        android:layout_height="31dp"
-        android:id="@+id/imageView" />
+        android:layout_width="59dp"
+        android:layout_height="59dp"
+        android:background="#F66BFF"
+        android:id="@+id/imageView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_margin="5dp"/>
 
     <TextView
         android:layout_width="129dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/contact_name"
-        android:id="@+id/textView2"
+        android:id="@+id/textView"
         android:layout_toEndOf="@+id/imageView"
-        android:layout_alignBottom="@+id/imageView"
-        android:layout_toRightOf="@+id/imageView" />
-
-    <ToggleButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/switch_name"
-        android:id="@+id/switch1"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/textView2"
-        android:layout_toEndOf="@+id/textView2" />
+        android:layout_toRightOf="@+id/imageView"
+        android:textColor="@color/text_color"
+        android:clickable="false"
+        android:textStyle="bold" />
+
+    <Switch
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/switch1"
+        android:layout_toEndOf="@+id/textView"
+        android:layout_alignBaseline="@+id/textView"
+        android:layout_alignBottom="@+id/textView"
+        android:layout_toRightOf="@+id/textView" />
 </RelativeLayout>
