--- a/app/src/main/res/menu/global.xml
+++ b/app/src/main/res/menu/global.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item
         android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+        android:title=""
         android:orderInCategory="100"
         android:showAsAction="ifRoom"
         />
@@ -10,7 +10,7 @@
         android:actionViewClass="android.widget.SearchView"
         android:title="@string/search_name"
         android:icon="@android:drawable/ic_menu_search"
-        android:showAsAction="ifRoom"
+        android:showAsAction="always"
         />
     <item
         android:id="@+id/myswitch"
@@ -18,4 +18,5 @@
         android:showAsAction="always"
         android:actionLayout="@layout/master_switch"
         />
+
 </menu>
