--- a/app/src/main/res/layout/list_item_row.xml
+++ b/app/src/main/res/layout/list_item_row.xml
@@ -18,12 +18,9 @@
         android:layout_alignBottom="@+id/imageView"
         android:layout_toRightOf="@+id/imageView" />
 
-    <ToggleButton
+    <Spinner
+        android:id="@+id/spinner"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/switch_name"
-        android:id="@+id/switch1"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/textView2"
-        android:layout_toEndOf="@+id/textView2" />
+        android:layout_height="wrap_content"/>
+
 </RelativeLayout>
