--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:background="@color/active"
             android:layout_marginBottom="0.5dp"
+            android:layout_marginRight="0.5dp"
             android:layout_marginTop="0dp"
             android:focusableInTouchMode="true"
             android:clickable="true"
@@ -27,8 +28,9 @@
             <ImageView
                 android:layout_width="59dp"
                 android:layout_height="59dp"
-                android:background="#F66BFF"
+                android:background="@color/image_background"
                 android:id="@+id/imageView"
+                android:src="@drawable/contact_image"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
@@ -69,8 +71,9 @@
         <ImageView
             android:layout_width="59dp"
             android:layout_height="59dp"
-            android:background="#F66BFF"
+            android:background="#ffd5ecff"
             android:id="@+id/imageView"
+            android:src="@drawable/contact_image"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -110,8 +113,9 @@
             <ImageView
                 android:layout_width="59dp"
                 android:layout_height="59dp"
-                android:background="#F66BFF"
+                android:background="@color/image_background"
                 android:id="@+id/imageView"
+                android:src="@drawable/contact_image"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
@@ -152,8 +156,9 @@
             <ImageView
                 android:layout_width="59dp"
                 android:layout_height="59dp"
-                android:background="#F66BFF"
+                android:background="@color/image_background"
                 android:id="@+id/imageView"
+                android:src="@drawable/contact_image"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
@@ -193,8 +198,9 @@
             <ImageView
                 android:layout_width="59dp"
                 android:layout_height="59dp"
-                android:background="#F66BFF"
+                android:background="@color/image_background"
                 android:id="@+id/imageView"
+                android:src="@drawable/contact_image"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
