--- a/app/src/main/res/layout/list_item_row.xml
+++ b/app/src/main/res/layout/list_item_row.xml
@@ -4,16 +4,19 @@
     android:layout_height="wrap_content"
     android:background="@color/active"
     android:layout_marginBottom="0.5dp"
+    android:layout_marginRight="0.5dp"
     android:layout_marginTop="0dp"
     android:focusableInTouchMode="true"
     android:clickable="true"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:focusable="true">
 
     <ImageView
         android:layout_width="59dp"
         android:layout_height="59dp"
-        android:background="#F66BFF"
+        android:background="@color/image_background"
         android:id="@+id/imageView"
+        android:src="@drawable/contact_image"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
