--- a/app/src/main/res/layout/list_item_row.xml
+++ b/app/src/main/res/layout/list_item_row.xml
@@ -8,7 +8,10 @@
     android:layout_marginTop="0dp"
     android:focusableInTouchMode="true"
     android:clickable="true"
-    android:padding="5dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
+    android:paddingBottom="10dp"
+    android:paddingTop="5dp"
     android:focusable="true">
 
     <ImageView
@@ -23,26 +26,16 @@
         android:layout_margin="5dp"/>
 
     <TextView
-        android:layout_width="129dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@android:id/text1"
         android:layout_toEndOf="@+id/imageView"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imageView"
         android:textColor="@color/text_color"
         android:clickable="false"
-        android:textStyle="bold" />
-
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <ToggleButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:textStyle="bold"
+        android:gravity="center_vertical"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/imageView" />
 
 </RelativeLayout>
