--- a/app/src/main/res/layout/list_item_row.xml
+++ b/app/src/main/res/layout/list_item_row.xml
@@ -20,12 +20,6 @@
         android:layout_alignParentStart="true"
         android:layout_margin="5dp"/>
 
-    <Spinner
-        android:id="@+id/Spinner"
-        android:layout_width="59dp"
-        android:layout_height="59dp"
-        android:layout_toRightOf="@id/imageView"></Spinner>
-
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -36,6 +30,6 @@
         android:textStyle="bold"
         android:layout_centerVertical="true"
         android:layout_centerInParent="true"
-        android:layout_toRightOf="@id/Spinner"
+        android:layout_toRightOf="@id/imageView"
         android:layout_marginLeft="5dp"/>
 </RelativeLayout>
